--- a/config/ModulesMapping.jsonc
+++ b/config/ModulesMapping.jsonc
@@ -28,14 +28,14 @@
   //  "Mail": "^users.inferenceClassification$|^users.mailFolder$|^users.message$",
   // "ManagedTenants": "^tenantRelationships.managedTenant$",
   // "NetworkAccess": "^networkAccess\\.",
-  // "Notes": "^users.onenote$|^groups.onenote$|^sites.onenote$",
+  "Notes": "^users.onenote$|^groups.onenote$|^sites.onenote$",
   // "People": "^users.person$|^users.profile$|^users.officeGraphInsights$|^users.userAnalytics$",
   // "PersonalContacts": "^users.contactFolder$|^users.contact$",
   // "Planner": "^planner\\.|^users.plannerUser$|^groups.plannerGroup$",
-   "Reports": "^reports\\.|^auditLogs\\.|^deviceManagement.deviceManagementReports$|^admin.adminReportSetting",
+  // "Reports": "^reports\\.|^auditLogs\\.|^deviceManagement.deviceManagementReports$|^admin.adminReportSetting",
   // "SchemaExtensions": "^schemaExtensions\\.",
   // "Search": "^search\\.|^external\\.",
-  //"Security": "^security\\.|^users.security$",
+  "Security": "^security\\.|^users.security$",
   //"Sites": "^sites.baseSitePage$|^sites.site$|^sites.itemAnalytics$|^sites.columnDefinition$|^sites.contentType$|^sites.drive$|^sites.list$|^sites.sitePage$|^sites.permission$|^sites.store$|^users.site$|^groups.site$|^sites.*.Functions$|^sites.*.Actions$|^sites.richLongRunningOperation$|^termStore.sets.ListChildren$|^admin.sharepoint$",
   //"Teams": "^teams\\.|^chats\\.|^users.chat$|^appCatalogs.teamsApp$|^users.userTeamwork$|^teamwork\\.|^users.team$|^groups.team$",
  // "Users": "^users.user$|^users.directoryObject$|^users.licenseDetails$|^users.mailboxSettings|^users.notification$|^users.outlookUser$|^users.profilePhoto$|^users.userSettings$|^users.extension$|^users.oAuth2PermissionGrant$|^users.todo$|^users.itemInsights$|^users.servicePrincipal$",
