--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -74,6 +74,14 @@ extends:
               publishLocation: 'Container'
         steps:
         - script: |
+            echo "Cleaning up temp files and folders..."
+            powershell -Command "& { 
+              $TempPath = 'C:\Users\CLOUDT~1\AppData\Local\Temp\'
+              Write-Output 'Removing temp files from ' $TempPath
+              Get-ChildItem -Path $TempPath -Recurse -Force | Remove-Item -Recurse -Force -ErrorAction SilentlyContinue
+              Write-Output 'Temp cleanup complete!'
+            }"
+        - script: |
             git submodule update --init --recursive
         - template: .azure-pipelines/common-templates/install-tools.yml@self
         - template: .azure-pipelines/common-templates/security-pre-checks.yml@self
