--- a/.azure-pipelines/common-templates/install-tools.yml
+++ b/.azure-pipelines/common-templates/install-tools.yml
@@ -5,8 +5,12 @@ steps:
   - task: UseDotNet@2
     displayName: Use .NET SDK
     inputs:
-      debugMode: false
       version: 8.x
+      
+  - task: UseDotNet@2
+    displayName: Use .NET SDK
+    inputs:
+      version: 9.x
 
   - task: NuGetToolInstaller@1
     displayName: Install Nuget
