Returned installation of 8.x because of xunit tests

--- a/.azure-pipelines/common-templates/install-tools.yml
+++ b/.azure-pipelines/common-templates/install-tools.yml
@@ -5,7 +5,12 @@ steps:
   - task: UseDotNet@2
     displayName: Use .NET SDK
     inputs:
-      version: 6.x     
+      version: 8.x 
+
+  - task: UseDotNet@2
+    displayName: Use .NET SDK
+    inputs:
+      version: 6.x 
       
   - task: NuGetToolInstaller@1
     displayName: Install Nuget
