Added check to ensure that orginal types on values are maintained on values

--- a/tools/Tests/JsonUtilitiesTest/JsonUtilitiesTest.csproj
+++ b/tools/Tests/JsonUtilitiesTest/JsonUtilitiesTest.csproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <Compile Include="../../Custom/JsonExtensions.cs">
         <Link>../../Custom/JsonExtensions.cs</Link>
+        <Link>../../Custom/PreserveStringConverter.cs</Link>
+    </Compile>
+      <Compile Include="../../Custom/PreserveStringConverter.cs">
+        <Link>../../Custom/PreserveStringConverter.cs</Link>
     </Compile>
   </ItemGroup>
 
