--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -84,11 +84,11 @@ extends:
             Pack: ${{ parameters.Pack }}
             Sign: ${{ parameters.Sign }}
 
-        - template: .azure-pipelines/generation-templates/workload-modules.yml@self
-          parameters:
-            Test: ${{ parameters.Test }}
-            Pack: ${{ parameters.Pack }}
-            Sign: ${{ parameters.Sign }}
+        # - template: .azure-pipelines/generation-templates/workload-modules.yml@self
+        #   parameters:
+        #     Test: ${{ parameters.Test }}
+        #     Pack: ${{ parameters.Pack }}
+        #     Sign: ${{ parameters.Sign }}
 
         - template: .azure-pipelines/generation-templates/meta-module.yml@self
           parameters:
